--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Easily calculate your CGPA online with our free CGPA Calculator for university students." />
-  <meta name="keywords" content="CGPA Calculator, GPA Calculator, University Students, Education Tool" />
-  <meta name="author" content="Your Name" />
-  <title>CGPA Calculator - For University Students</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Christian Diary – Soul-inspiring long-form Christian stories to uplift your spirit and strengthen your faith.">
+  <title>Christian Diary</title>
+  
+  <!-- Google AdSense Auto Ads -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-3253581979430606" crossorigin="anonymous"></script>
+
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: Georgia, serif;
       color: white;
-      background: linear-gradient(-45deg, #1e3c72, #2a5298, #0f2027, #203a43);
-      background-size: 400% 400%;
-      animation: gradientBG 10s ease infinite;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       text-align: center;
+      background: linear-gradient(-45deg, #1e3c72, #2a5298, #3b5998, #192f6a);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
     }
 
     @keyframes gradientBG {
@@ -29,44 +26,52 @@
       100% { background-position: 0% 50%; }
     }
 
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
+    header {
+      padding: 50px 20px 20px;
+      font-size: 2.5rem;
+      font-weight: bold;
     }
 
     p {
+      max-width: 600px;
+      margin: 20px auto;
       font-size: 1.2rem;
-      max-width: 500px;
-      margin: 0 auto 20px;
+      line-height: 1.6;
     }
 
     a.button {
-      background: #ffcc00;
-      color: black;
-      padding: 12px 20px;
+      display: inline-block;
+      background: #fff;
+      color: #1e3c72;
+      padding: 12px 25px;
+      margin-top: 20px;
       text-decoration: none;
-      border-radius: 6px;
       font-weight: bold;
-      transition: 0.3s;
+      border-radius: 25px;
+      transition: background 0.3s ease, color 0.3s ease;
     }
 
     a.button:hover {
-      background: #ffaa00;
+      background: #1e3c72;
+      color: #fff;
     }
 
     footer {
-      position: absolute;
-      bottom: 10px;
+      margin-top: 50px;
+      padding: 20px;
       font-size: 0.9rem;
-      opacity: 0.7;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to CGPA Calculator</h1>
-  <p>Calculate your CGPA quickly and accurately with our easy-to-use tool, designed for university students.</p>
-  <a href="calculator.html" class="button">Start Calculating</a>
 
-  <footer>&copy; 2025 CGPA Calculator. All rights reserved.</footer>
+  <header>Christian Diary</header>
+  <p>Welcome to Christian Diary — a home for soul-inspiring stories that will uplift your spirit, deepen your faith, and draw you closer to God.</p>
+  
+  <a href="stories/tobi.html" class="button">Read Our Stories</a>
+
+  <footer>© 2025 Christian Diary. All rights reserved.</footer>
+
 </body>
 </html>
