--- a/index.html
+++ b/index.html
@@ -3,65 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Calculate your CGPA instantly with our easy-to-use University CGPA Calculator. Perfect for students in all universities. Track grades, improve performance, and plan your academic success.">
-  <title>University CGPA Calculator</title>
+  <meta name="description" content="Easily calculate your CGPA online with our free CGPA Calculator for university students." />
+  <meta name="keywords" content="CGPA Calculator, GPA Calculator, University Students, Education Tool" />
+  <meta name="author" content="Your Name" />
+  <title>CGPA Calculator - For University Students</title>
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(-45deg, #6a11cb, #2575fc, #ff6a00, #ff0000);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      font-family: Arial, sans-serif;
       color: white;
+      background: linear-gradient(-45deg, #1e3c72, #2a5298, #0f2027, #203a43);
+      background-size: 400% 400%;
+      animation: gradientBG 10s ease infinite;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       text-align: center;
     }
+
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
     h1 {
-      font-size: 2.5em;
-      margin-top: 15%;
+      font-size: 3rem;
+      margin-bottom: 10px;
     }
-    .typing {
-      border-right: 3px solid #fff;
-      white-space: nowrap;
-      overflow: hidden;
-      animation: typing 4s steps(30, end), blink 0.5s step-end infinite alternate;
+
+    p {
+      font-size: 1.2rem;
+      max-width: 500px;
+      margin: 0 auto 20px;
     }
-    @keyframes typing {
-      from { width: 0 }
-      to { width: 100% }
-    }
-    @keyframes blink {
-      from, to { border-color: transparent }
-      50% { border-color: white; }
-    }
+
     a.button {
-      display: inline-block;
-      padding: 15px 25px;
-      margin-top: 20px;
-      font-size: 1.2em;
-      color: white;
-      background: #ff6a00;
-      border-radius: 8px;
+      background: #ffcc00;
+      color: black;
+      padding: 12px 20px;
       text-decoration: none;
-      transition: transform 0.2s ease-in-out;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: 0.3s;
     }
+
     a.button:hover {
-      transform: scale(1.1);
-      background: #ff4500;
+      background: #ffaa00;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 10px;
+      font-size: 0.9rem;
+      opacity: 0.7;
     }
   </style>
 </head>
 <body>
-  <h1 class="typing">Welcome to Your CGPA Calculator</h1>
-  <p>Track your academic progress and plan for success</p>
+  <h1>Welcome to CGPA Calculator</h1>
+  <p>Calculate your CGPA quickly and accurately with our easy-to-use tool, designed for university students.</p>
   <a href="calculator.html" class="button">Start Calculating</a>
 
-  <script>
-    // Future: Add JS interactivity here
-  </script>
+  <footer>&copy; 2025 CGPA Calculator. All rights reserved.</footer>
 </body>
 </html>
