--- a/index.html
+++ b/index.html
@@ -3,106 +3,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Free online CGPA Calculator for university students. Calculate your CGPA quickly and accurately with our easy-to-use tool." />
-  <meta name="keywords" content="CGPA Calculator, GPA Calculator, University Students, Education Tool, Grade Calculator" />
-  <meta name="author" content="Your Name" />
-  <title>CGPA Calculator - For University Students</title>
+  <meta name="description" content="University Student Tools – GPA Calculator, Study Tips, and Academic Resources" />
+  <title>University Student Tools</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      color: white;
-      background: linear-gradient(-45deg, #1e3c72, #2a5298, #0f2027, #203a43);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(-45deg, #4facfe, #00f2fe, #43e97b, #f9f871);
       background-size: 400% 400%;
-      animation: gradientBG 10s ease infinite;
+      animation: gradientBG 15s ease infinite;
+      color: #fff;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      min-height: 100vh;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
-      padding: 0 20px;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     h1 {
       font-size: 3rem;
-      margin-bottom: 10px;
-      animation: fadeInDown 1s ease;
+      margin-bottom: 0.5em;
     }
-
     p {
-      font-size: 1.2rem;
-      max-width: 500px;
-      margin: 0 auto 20px;
-      animation: fadeInUp 1.2s ease;
+      font-size: 1.3rem;
+      max-width: 600px;
     }
-
     a.button {
-      background: #ffcc00;
-      color: black;
-      padding: 12px 20px;
-      text-decoration: none;
-      border-radius: 6px;
-      font-weight: bold;
-      transition: 0.3s;
-      animation: pulse 2s infinite;
-    }
-
-    a.button:hover {
-      background: #ffaa00;
-    }
-
-    footer {
-      position: absolute;
-      bottom: 10px;
-      font-size: 0.9rem;
-      opacity: 0.7;
-    }
-
-    /* Animations */
-    @keyframes fadeInDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
-
-    /* Ad placeholder */
-    #ad-space {
+      display: inline-block;
       margin-top: 20px;
-      padding: 10px;
-      background: rgba(255,255,255,0.1);
-      border-radius: 6px;
-      min-height: 60px;
-      font-size: 0.8rem;
-      opacity: 0.8;
+      padding: 12px 25px;
+      background: rgba(255, 255, 255, 0.2);
+      border: 2px solid white;
+      border-radius: 25px;
+      color: white;
+      text-decoration: none;
+      transition: background 0.3s, transform 0.2s;
+    }
+    a.button:hover {
+      background: rgba(255, 255, 255, 0.4);
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to CGPA Calculator</h1>
-  <p>Calculate your CGPA quickly and accurately with our easy-to-use tool, designed for university students.</p>
-  
-  <a href="calculator.html" class="button">Start Calculating</a>
-
-  <!-- Future AdSense placement -->
-  <div id="ad-space">Ad space (Google AdSense ready)</div>
-
-  <footer>&copy; 2025 CGPA Calculator. All rights reserved.</footer>
+  <h1>Welcome to University Student Tools</h1>
+  <p>Your one-stop platform for GPA calculation, study tips, and academic success.</p>
+  <a href="cgpa.html" class="button">Go to CGPA Calculator</a>
 </body>
 </html>
