--- a/index.html
+++ b/index.html
@@ -1,58 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="University Student Tools – GPA Calculator, Study Tips, and Academic Resources" />
-  <title>University Student Tools</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(-45deg, #4facfe, #00f2fe, #43e97b, #f9f871);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    @keyframes gradientBG {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5em;
-    }
-    p {
-      font-size: 1.3rem;
-      max-width: 600px;
-    }
-    a.button {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 25px;
-      background: rgba(255, 255, 255, 0.2);
-      border: 2px solid white;
-      border-radius: 25px;
-      color: white;
-      text-decoration: none;
-      transition: background 0.3s, transform 0.2s;
-    }
-    a.button:hover {
-      background: rgba(255, 255, 255, 0.4);
-      transform: scale(1.05);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Your ultimate resource hub for university students. Calculate CGPA, access study tips, and explore academic tools.">
+    <title>Campus Tools & Tips</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f9;
+            color: #333;
+        }
+        header {
+            background: linear-gradient(-45deg, #4a90e2, #50e3c2, #9013fe, #f5a623);
+            background-size: 400% 400%;
+            animation: gradientMove 12s ease infinite;
+            padding: 40px;
+            text-align: center;
+            color: white;
+        }
+        @keyframes gradientMove {
+            0% {background-position: 0% 50%;}
+            50% {background-position: 100% 50%;}
+            100% {background-position: 0% 50%;}
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            animation: fadeIn 2s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from {opacity: 0;}
+            to {opacity: 1;}
+        }
+        nav {
+            background-color: white;
+            padding: 10px;
+            text-align: center;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        nav a {
+            text-decoration: none;
+            color: #4a90e2;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        .cta {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 30px 0;
+        }
+        .cta a {
+            background-color: #4a90e2;
+            color: white;
+            padding: 12px 20px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+        .cta a:hover {
+            background-color: #357ABD;
+        }
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+        .feature {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            width: 300px;
+            text-align: center;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        }
+        footer {
+            background: #222;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Welcome to University Student Tools</h1>
-  <p>Your one-stop platform for GPA calculation, study tips, and academic success.</p>
-  <a href="cgpa.html" class="button">Go to CGPA Calculator</a>
+
+<header>
+    <h1>🎓 Campus Tools & Tips</h1>
+    <p>Your one-stop hub for university success!</p>
+</header>
+
+<nav>
+    <a href="#">Home</a>
+    <a href="#">CGPA Calculator</a>
+    <a href="#">Study Tips</a>
+    <a href="#">Resources</a>
+</nav>
+
+<section class="cta">
+    <a href="#">📊 Calculate Your CGPA</a>
+    <a href="#">📚 Explore Study Tips</a>
+</section>
+
+<section class="features">
+    <div class="feature">
+        <h3>🎯 Accurate CGPA Calculator</h3>
+        <p>Quickly calculate your semester or cumulative GPA.</p>
+    </div>
+    <div class="feature">
+        <h3>📖 Study Hacks</h3>
+        <p>Discover effective study strategies that actually work.</p>
+    </div>
+    <div class="feature">
+        <h3>🛠 Student Tools</h3>
+        <p>Access planners, note templates, and research aids.</p>
+    </div>
+</section>
+
+<!-- Adsense space reserved -->
+<section style="text-align:center; margin: 30px 0;">
+    <!-- ADSENSE CODE WILL GO HERE LATER -->
+</section>
+
+<footer>
+    <p>&copy; 2025 Campus Tools & Tips. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
+
