Add cgpa-calculator.html and link from index

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 </header>
 
 <nav>
-    <a href="#">Home</a>
-    <a href="#">CGPA Calculator</a>
-    <a href="#">Study Tips</a>
-    <a href="#">Resources</a>
+  <a href="index.html">Home</a>
+  <a href="cgpa-calculator.html">CGPA Calculator</a>
+  <a href="study-tips.html">Study Tips</a>
+  <a href="resources.html">Resources</a>
 </nav>
 
 <section class="cta">
