--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy Policy — Campus Tools & Tips</title>
-  <meta name="description" content="Privacy policy for Campus Tools & Tips — how we handle your data and protect your privacy." />
+  <title>About — Campus Tools & Tips</title>
+  <meta name="description" content="About Campus Tools & Tips — helping Nigerian university students succeed with useful tools, tips, and resources." />
   <style>
     :root{
       --primary1:#4a90e2;
@@ -80,8 +80,8 @@
 <body>
 
   <header>
-    <h1>🔒 Privacy Policy</h1>
-    <p class="muted">How Campus Tools & Tips protects your information and respects your privacy.</p>
+    <h1>📖 About Campus Tools & Tips</h1>
+    <p class="muted">Helping Nigerian university students excel through practical tools, study guides, and resources.</p>
   </header>
 
   <nav>
@@ -89,44 +89,47 @@
     <a href="cgpa-calculator.html">CGPA Calculator</a>
     <a href="study-tips.html">Study Tips</a>
     <a href="resources.html">Resources</a>
-    <a href="privacy.html" class="active">Privacy</a>
+    <a href="about.html" class="active">About</a>
   </nav>
 
   <div class="container">
 
     <section class="card">
-      <h2>Information We Collect</h2>
-      <p>Campus Tools & Tips does not collect personal data such as your name, email, or location when you visit the site. We do not require user accounts or registrations.</p>
-      <p>The only data collected may come from Google AdSense or Google Analytics scripts embedded on the site to show relevant ads and monitor site usage. This data is managed by Google according to their privacy policies.</p>
+      <h2>Our Mission</h2>
+      <p>Campus Tools & Tips is dedicated to empowering Nigerian university students with easy-to-use online tools, practical study tips, and curated academic resources tailored to the unique challenges of Nigerian tertiary education.</p>
+      <p>We aim to simplify your academic journey, helping you manage your time effectively, prepare well for exams, and access the right materials that boost your performance.</p>
     </section>
 
     <section class="card">
-      <h2>Use of Cookies</h2>
-      <p>We do not place cookies on your device ourselves. However, third-party services like Google AdSense may use cookies to personalize ads and track user interactions. You can manage cookies through your browser settings.</p>
+      <h2>Why We Created This Site</h2>
+      <p>Navigating university life in Nigeria can be challenging due to irregular schedules, limited access to quality materials, and lack of effective study planning. This site was created to fill those gaps by offering:</p>
+      <ul>
+        <li>Simple, accurate tools like our CGPA calculator that reflect Nigerian university grading systems.</li>
+        <li>Practical study tips based on proven strategies and real student experiences.</li>
+        <li>Free downloadable planners and checklists to help you stay organized.</li>
+        <li>Guidance on where to legally find past questions, textbooks, and other academic resources.</li>
+      </ul>
     </section>
 
     <section class="card">
-      <h2>Data Sharing & Security</h2>
-      <p>We do not share your personal information with any third parties. All data collected by third-party advertising or analytics services is subject to their own privacy terms.</p>
-      <p>Our website uses HTTPS to encrypt data transmitted between your browser and our server for your safety.</p>
+      <h2>About the Creator</h2>
+      <p>Campus Tools & Tips is developed and maintained by Samson Ugboke, a Nigerian student and tech enthusiast passionate about education technology. Samson understands the struggles Nigerian students face and uses his skills to build practical solutions that help students succeed.</p>
+      <p>If you have suggestions, corrections, or resources to share, feel free to get in touch via the contact details below.</p>
     </section>
 
     <section class="card">
-      <h2>Your Choices</h2>
-      <p>You can choose to disable third-party cookies in your browser or use ad blockers if you prefer not to see personalized ads.</p>
-      <p>If you have questions about your data or privacy on this site, please contact us at <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener">support@sampulse.github.io</a>.</p>
-    </section>
-
-    <section class="card">
-      <h2>Changes to This Policy</h2>
-      <p>We may update this privacy policy occasionally. Changes will be posted on this page with the last updated date indicated here:</p>
-      <p><em>Last updated: August 2025</em></p>
+      <h2>Contact & Feedback</h2>
+      <p>We welcome your feedback to improve the site and make it even more helpful.</p>
+      <ul>
+        <li>Email: <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener">support@sampulse.github.io</a></li>
+        <li>GitHub: <a href="https://github.com/Sampulse" target="_blank" rel="noopener">https://github.com/Sampulse</a></li>
+      </ul>
     </section>
 
   </div>
 
   <footer>
-    © 2025 Campus Tools & Tips — Privacy Policy
+    © 2025 Campus Tools & Tips — Built for Nigerian Students
   </footer>
 
 </body>
